--- a/CHANGES
+++ b/CHANGES
@@ -2,9 +2,13 @@ Louvre (2.12.0-1)
 
   # New Protocols
 
-  * Wlr Output Management: For allowing apps to configure/arrange displays. Check the documentation for details.
+  * Wlr Output Management: Allows apps to configure and arrange displays. Check the documentation for details.
 
- -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 09 Nov 2024 13:43:01 -0300
+  # Dependencies
+
+  * Updated SRM dependency to >= 0.10.0.
+
+ -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Mon, 11 Nov 2024 10:29:59 -0300
 
 
 Louvre (2.11.0-1)
