--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,22 @@
+Louvre (2.14.1-1)
+
+  # Bug Fixes
+
+  * Wayland Backend: Fixed occasional flickering when no damage is generated within LOutput::paintGL().
+  * LOutput::repaintFilter: Updated internal implementation to reduce CPU consumption and allow cursor plane updates when using the atomic DRM API.
+
+  # Dependencies
+
+  * Updated SRM dependency to version >= 0.12.0.
+
+-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com> Sat, 08 Feb 2025 08:27:14 -0300
+
+
 Louvre (2.14.0-1)
 
   # API Additions
 
-  - LOutput::repaintFilter(): Intercepts LOutput::repaint() calls, making it easier to retain the last rendered frame. Special thanks to @LeKinaSa and @jgroboredo for highlighting the need for this feature.
+  * LOutput::repaintFilter(): Intercepts LOutput::repaint() calls, making it easier to retain the last rendered frame. Special thanks to @LeKinaSa and @jgroboredo for highlighting the need for this feature.
 
 -- Eduardo Hopperdietzel <ehopperdietzel@gmail.com> Mon, 27 Jan 2025 17:47:20 -0300
 
