--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,18 @@
-Louvre (2.17.0-1)
+Louvre (2.18.1-1)
+
+  # Bug Fixes
+
+  * Clients were unable to reuse wl_surfaces for popups after the previous role was destroyed.
+  * The LPointer:enableNaturalScrollingX/Y options were behaving incorrectly.
+
+  # Documentation
+
+  * Improved LPointerScrollEvent documentation.
+
+-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com> Sun, 18 May 2025 22:16:50 -0400
+
+
+Louvre (2.18.0-1)
 
   # New Experimental Protocols
 
